test/tests/errors/error-class-var-out-of-scope.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public var x: int = 1;
    }

    output x;
}